Updated to latest version of C-UI

--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -9,15 +9,15 @@
 
   <title>Corporate UI - Angular Basic Template</title>
 
-  <script src="https://static.scania.com/build/global/2.4.1/js/corporate-ui.js?preload=false"></script>
+  <script src="https://static.scania.com/build/global/2.5.0/js/corporate-ui.js?preload=false"></script>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
 </head>
 
 <body class="scania app" ng-controller="ThisSite as thissite">
 
-  <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
-    <nav-item location="/corporate-ui/">UX Library</nav-item>
+  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
+    <nav-item location="/corporate-ui-docs/">UX Library</nav-item>
     <nav-item location="https://github.scania.com/scania/corporate-ui">Scania GitHub</nav-item>
   </c-corporate-header>
     
@@ -33,9 +33,9 @@
         <article>
         <h1>Angular Corporate UI Demo</h1>
           <p>This is a demopage using AngularJS togheter with Corporate UI. Populating the main navigation can be solved in many different ways and this is a very basic sample. It is not intended to use "as is" rather than to give you ideas of how to pair Corporate UI with the framework of your choice. 
-          When you've solved the inital setup, then use <a href="/corporate-ui/developer/bootstrap-original-docs.html">Scania Bootstrap</a> to apply the Scania Brand Identity to your application.</p>
-          <p>Learn why <a href="/corporate-ui/developer/caching.html">you shouldn't include Corporate UI in your build</a> rather than fetch it from <a href="/corporate-ui/images/data-centers.png" target="_blank">the Scania CDN</a> in real time.</p> 
-          <a href="/corporate-ui/developer/corporate-ui-for-frameworks.html" class="btn btn-link btn-lg"><i class="icon-arrow-left"></i> To UX Library</a>
+          When you've solved the inital setup, then use <a href="/corporate-ui-docs/developer/bootstrap-original-docs.html">Scania Bootstrap</a> to apply the Scania Brand Identity to your application.</p>
+          <p>Learn why <a href="/corporate-ui-docs/developer/caching.html">you shouldn't include Corporate UI in your build</a> rather than fetch it from <a href="/corporate-ui-docs/images/data-centers.png" target="_blank">the Scania CDN</a> in real time.</p> 
+          <a href="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html" class="btn btn-link btn-lg"><i class="icon-arrow-left"></i> To UX Library</a>
           <a href="angular-basic-template.html" download class="btn btn-default btn-lg">Download this template</a>
           
         </article>  
