--- a/docs/template/corporate-ui-basic-template.html
+++ b/docs/template/corporate-ui-basic-template.html
@@ -11,12 +11,12 @@
   
   <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>   
 
-  <script src="https://static.scania.com/build/global/2.4.1/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/2.5.0/js/corporate-ui.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui/js/google-analytics.js"></script>  
+  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
 
-  <script src="https://static.scania.com/build/global/2.4.1/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/2.5.0/js/corporate-ui.js"></script>
 
   <!-- 
   To the link/import list below, add the components that the page will include. Components can be found on in the UX Library at static.scania.com/ux-library (internal users only).
@@ -50,17 +50,17 @@
 
     <c-main-navigation>
       <primary-items>
-        <nav-item location="/corporate-ui/index.html">UX Library</nav-item>
-        <nav-item location="/corporate-ui/logotype/">Logotype</nav-item>
-        <nav-item location="/corporate-ui/icons/">Icons</nav-item>
-        <nav-item location="/corporate-ui/typography/">Typography</nav-item>
-        <nav-item location="/corporate-ui/developer/" class="active">Web Applications
+        <nav-item location="/corporate-ui-docs/index.html">UX Library</nav-item>
+        <nav-item location="/corporate-ui-docs/logotype/">Logotype</nav-item>
+        <nav-item location="/corporate-ui-docs/icons/">Icons</nav-item>
+        <nav-item location="/corporate-ui-docs/typography/">Typography</nav-item>
+        <nav-item location="/corporate-ui-docs/developer/" class="active">Web Applications
           <sub-navigation caption="Web Applications">
-            <nav-item location="/corporate-ui/developer/">Corporate UI</nav-item>          
-            <nav-item location="/corporate-ui/component/">Available Components</nav-item>
-            <nav-item location="/corporate-ui/template/">Templates</nav-item>
-            <nav-item location="/corporate-ui/developer/uiaas.html">UIaaS stategies</nav-item>
-            <nav-item location="/corporate-ui/developer/support.html">Request support</nav-item>            
+            <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>          
+            <nav-item location="/corporate-ui-docs/component/">Available Components</nav-item>
+            <nav-item location="/corporate-ui-docs/template/">Templates</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/uiaas.html">UIaaS stategies</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/support.html">Request support</nav-item>            
           </sub-navigation>
         </nav-item>
       </primary-items>
@@ -88,7 +88,7 @@
         <!-- Style atribute added to simulate scania.com bnehaivor -->
           <h2 style="padding: 0 10%;">PLAY AROUND!</h2>
           <p style="padding: 0 10%;">This template is running on a Beta version of the new Web Component based framework called Corporate UI. To run this file at your server, you'll need sure <a href="http://enable-cors.org/server.html" target="_blank">that CORS is enabled</a>.
-          <p>Please use this template and change content and parameters to fit your needs. Use additional components from <a href="/corporate-ui/component">the UX Library</a>. Stay in contact with the developers using <a href="mailto:corporate-ui@scania.com">corporate-ui@scania.com</a></p>
+          <p>Please use this template and change content and parameters to fit your needs. Use additional components from <a href="/corporate-ui-docs/component">the UX Library</a>. Stay in contact with the developers using <a href="mailto:corporate-ui@scania.com">corporate-ui@scania.com</a></p>
           
       </div>
     </section>
