--- a/docs/template/starter-kit/index.html
+++ b/docs/template/starter-kit/index.html
@@ -13,10 +13,10 @@
 
   <!-- corporate-ui.js includes Bootstrap, handling for old browsers, corporate header, main menu and footer as well as Web Components polyfills, if needed -->
   <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>   
-  <script src="https://static.scania.com/build/global/2.4.1/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/2.5.0/js/corporate-ui.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui/js/google-analytics.js"></script>  
+  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
 
 
 
@@ -29,7 +29,7 @@
 
   <!-- The header main menu and footer we hope are quite self explainatory :-) --> 
     
-  <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
+  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
@@ -39,17 +39,17 @@
 
     <c-main-navigation>
       <primary-items>
-        <nav-item location="/corporate-ui/index.html">Home</nav-item>
-        <nav-item location="/corporate-ui/logotype/">Logotype</nav-item>
-        <nav-item location="/corporate-ui/icons/">Icons</nav-item>
-        <nav-item location="/corporate-ui/typography/">Typography</nav-item>
-        <nav-item location="/corporate-ui/developer/" class="active">Web Applications
+        <nav-item location="/corporate-ui-docs/index.html">Home</nav-item>
+        <nav-item location="/corporate-ui-docs/logotype/">Logotype</nav-item>
+        <nav-item location="/corporate-ui-docs/icons/">Icons</nav-item>
+        <nav-item location="/corporate-ui-docs/typography/">Typography</nav-item>
+        <nav-item location="/corporate-ui-docs/developer/" class="active">Web Applications
           <sub-navigation caption="Web Applications">
-            <nav-item location="/corporate-ui/developer/">Corporate UI</nav-item>          
-            <nav-item location="/corporate-ui/component/">Available Components</nav-item>
-            <nav-item location="/corporate-ui/template/">Templates</nav-item>
-            <nav-item location="/corporate-ui/developer/caching.html">Caching stategies</nav-item>
-            <nav-item location="/corporate-ui/developer/support.html">Request support</nav-item>            
+            <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>          
+            <nav-item location="/corporate-ui-docs/component/">Available Components</nav-item>
+            <nav-item location="/corporate-ui-docs/template/">Templates</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/caching.html">Caching stategies</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/support.html">Request support</nav-item>            
           </sub-navigation>
         </nav-item>
       </primary-items>
