--- a/docs/template/advanced-tables/responsive-cards/table-responsive-cards.html
+++ b/docs/template/advanced-tables/responsive-cards/table-responsive-cards.html
@@ -8,7 +8,7 @@
   	<script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
 	<!-- demo -->
-    <script src="https://static.scania.com/build/global/2.4.1/js/corporate-ui.js"></script>
+    <script src="https://static.scania.com/build/global/2.5.0/js/corporate-ui.js"></script>
 
 
 	<!-- jQuery -->
@@ -110,7 +110,7 @@
 });</script>
 </head>
 <body class="scania app" data-env="proto">
-	<c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
+	<c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
 		<nav-item location="https://www.scania.com">Sample Link</nav-item>
 	</c-corporate-header>
 
