--- a/docs/template/advanced-tables/table-basic-template.html
+++ b/docs/template/advanced-tables/table-basic-template.html
@@ -8,13 +8,13 @@
 
   <title>Basic Table</title>
   <script src="https://static.scania.com/vendors/frameworks/jquery/1.11.3/jquery-1.11.3.min.js"></script>   
-  <script src="https://static.scania.com/build/global/2.4.1/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/2.5.0/js/corporate-ui.js"></script>
 
 </head>
 
 <body class="scania app" data-env="proto">
 
-<c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
+<c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
     <nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
 </c-corporate-header>
@@ -155,6 +155,6 @@
     </div>
   </section>  
 </c-main-content>
-<script src="/corporate-ui/ux-lib.js"></script>
+<script src="/corporate-ui-docs/ux-lib.js"></script>
 </body>
 </html>
