--- a/docs/template/advanced-tables/table-filtered-app.html
+++ b/docs/template/advanced-tables/table-filtered-app.html
@@ -8,7 +8,7 @@
 
 	<title>Sortable table with filtering</title>
 	<script src="https://static.scania.com/vendors/frameworks/jquery/1.11.3/jquery-1.11.3.min.js"></script>   
-	<script src="https://static.scania.com/build/global/2.4.1/js/corporate-ui.js"></script>
+	<script src="https://static.scania.com/build/global/2.5.0/js/corporate-ui.js"></script>
 
 
 	<!-- Table Sorter Plugin -->
@@ -53,12 +53,12 @@
 	</style>    
 
 
-<link rel="stylesheet" href="/corporate-ui/ux-lib.css">
+<link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">
 </head>
 
 <body class="scania app" data-env="proto">
 
-<c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
+<c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
     <nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
 </c-corporate-header>
@@ -171,7 +171,7 @@
 		</div>
 	</c-main-content>
 
-	<script src="/corporate-ui/ux-lib.js"></script>
+	<script src="/corporate-ui-docs/ux-lib.js"></script>
 
 </body>
 </html>
