--- a/docs/template/advanced-tables/table-match-any-column.htm
+++ b/docs/template/advanced-tables/table-match-any-column.htm
@@ -6,7 +6,7 @@
 
 	<!-- jQuery -->
 	<script src="https://static.scania.com/vendors/frameworks/jquery/1.11.3/jquery-1.11.3.min.js"></script>   
-	<script src="https://static.scania.com/build/global/2.4.1/js/corporate-ui.js"></script>
+	<script src="https://static.scania.com/build/global/2.5.0/js/corporate-ui.js"></script>
 
 	<link class="ui-theme" rel="stylesheet" href="https://static.scania.com/vendors/frameworks/jquery/jQuery-ui/1.12.1/jquery-ui.min.css">
 	<script src="https://static.scania.com/vendors/frameworks/jquery/jQuery-ui/1.12.1/jquery-ui.min.js"></script>
@@ -46,7 +46,7 @@
 </head>
 <body class="scania app" data-env="proto">
 
-	<c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
+	<c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
 		<nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
 		<nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
 	</c-corporate-header>
@@ -124,6 +124,6 @@
 						</tbody>
 					</table>
 			</div>
-	<script src="/corporate-ui/ux-lib.js"></script>
+	<script src="/corporate-ui-docs/ux-lib.js"></script>
 </body>
 </html>
