--- a/docs/template/advanced-tables/table-tree-view.html
+++ b/docs/template/advanced-tables/table-tree-view.html
@@ -11,7 +11,7 @@
   <title>Corporate UI - Table Tree View</title>
 
   <script src="https://static.scania.com/vendors/frameworks/jquery/1.11.3/jquery-1.11.3.min.js"></script>   
-  <script src="https://static.scania.com/build/global/2.4.1/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/2.5.0/js/corporate-ui.js"></script>
 
   <style>
     tbody th {font-family: 'Scania Sans Bold'}
@@ -20,11 +20,11 @@
 
   <link rel="stylesheet" href="https://static.scania.com/vendors/components/jQuery/hColumns/css/hcolumns.css" type="text/css">
 
-  <link rel="stylesheet" href="/corporate-ui/ux-lib.css">
+  <link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">
 </head>
 <body class="scania" data-env="proto">
 
-<c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
+<c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
     <nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
 </c-corporate-header>
@@ -136,6 +136,6 @@
       </div>
     </section>
   </c-main-content>
-  <script src="/corporate-ui/ux-lib.js"></script>
+  <script src="/corporate-ui-docs/ux-lib.js"></script>
 </body>
 </html>
