--- a/docs/template/basic-template.html
+++ b/docs/template/basic-template.html
@@ -9,13 +9,13 @@
 	<script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
 	<script src="https://static.scania.com/vendors/frameworks/jQuery/2.2.2/jquery.min.js"></script>
-	<script src="https://static.scania.com/build/global/2.4.1/js/corporate-ui.js"></script>
+	<script src="https://static.scania.com/build/global/2.5.0/js/corporate-ui.js"></script>
 
 </head>
 
 <body class="scania">
 
-	<c-corporate-header site-name="My New Application" site-url="/corporate-ui/">
+	<c-corporate-header site-name="My New Application" site-url="/corporate-ui-docs/">
 		<nav-item location="https://www.scania.com">Sample Link</nav-item>
 	</c-corporate-header>
 
