--- a/docs/template/charts-samples.html
+++ b/docs/template/charts-samples.html
@@ -8,21 +8,21 @@
   <title>UX Library - Colours</title>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
   <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>   
-  <script src="https://static.scania.com/build/global/2.4.1/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/2.5.0/js/corporate-ui.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui/js/google-analytics.js"></script>  
+  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
 
 
-  <link rel="stylesheet" href="/corporate-ui/ux-lib.css">
+  <link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">
   <style type="text/css">    
     .scania.bootstrap h1 {text-align: center; margin-top: 40px}    
     .scania.bootstrap p {text-align: center;margin:20px 15% 40px;}    
   </style>
-  <link rel="stylesheet" href="/corporate-ui/ux-lib.css">
+  <link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">
 </head>
 <body unresolved class="scania">  
-  <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
+  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
@@ -31,17 +31,17 @@
 
     <c-main-navigation show-search>
       <primary-items>
-        <nav-item location="/corporate-ui/">Home</nav-item>
-        <nav-item location="/corporate-ui/styleguide/" class="active">Style Guide
+        <nav-item location="/corporate-ui-docs/">Home</nav-item>
+        <nav-item location="/corporate-ui-docs/styleguide/" class="active">Style Guide
           <sub-navigation caption="Style Guide">
-            <nav-item location="/corporate-ui/logotype/">Logotype</nav-item>
-            <nav-item location="/corporate-ui/icons/">Icons</nav-item>
-            <nav-item location="/corporate-ui/colours/" class="active">Colours</nav-item>
-            <nav-item location="/corporate-ui/typography/">Typography</nav-item>
+            <nav-item location="/corporate-ui-docs/logotype/">Logotype</nav-item>
+            <nav-item location="/corporate-ui-docs/icons/">Icons</nav-item>
+            <nav-item location="/corporate-ui-docs/colours/" class="active">Colours</nav-item>
+            <nav-item location="/corporate-ui-docs/typography/">Typography</nav-item>
           </sub-navigation>
         </nav-item>            
-        <nav-item location="/corporate-ui/developer/">Web Applications</nav-item>
-        <nav-item location="/corporate-ui/mobile-apps/">Mobile Apps</nav-item>
+        <nav-item location="/corporate-ui-docs/developer/">Web Applications</nav-item>
+        <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
       </primary-items>
     </c-main-navigation>
     
