--- a/docs/template/html-copy-paste/html-copy-paste-page.html
+++ b/docs/template/html-copy-paste/html-copy-paste-page.html
@@ -9,10 +9,10 @@
   <meta charset="utf-8">
   <title>UX Library - Copy Paste HTML</title>
   <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>   
-  <script src="https://static.scania.com/build/global/2.4.1/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/2.5.0/js/corporate-ui.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui/js/google-analytics.js"></script>  
+  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
 
 
 </head>
@@ -22,7 +22,7 @@
 
 
 <xmp class="code-to-copy"> 
- <dont-run-c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
+ <dont-run-c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </dont-run-c-corporate-header>
@@ -33,18 +33,18 @@
 
     <dont-run-c-main-navigation show-search>
       <primary-items>
-        <nav-item location="/corporate-ui/">Home</nav-item>
-        <nav-item location="/corporate-ui/styleguide/">Style Guide</nav-item>            
-        <nav-item location="/corporate-ui/developer/" class="active">Web Applications
+        <nav-item location="/corporate-ui-docs/">Home</nav-item>
+        <nav-item location="/corporate-ui-docs/styleguide/">Style Guide</nav-item>            
+        <nav-item location="/corporate-ui-docs/developer/" class="active">Web Applications
           <sub-navigation caption="Scania Bootstrap">
-            <nav-item location="/corporate-ui/developer/scania-bootstrap-app.html">Bootstrap CSS for Applications</nav-item>
-            <nav-item location="/corporate-ui/developer/scania-bootstrap-public.html">Bootstrap Public CSS</nav-item>  
-            <nav-item location="/corporate-ui/template/html-copy-paste/html-copy-paste.html" class="active">Copy Paste HTML</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/scania-bootstrap-app.html">Bootstrap CSS for Applications</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/scania-bootstrap-public.html">Bootstrap Public CSS</nav-item>  
+            <nav-item location="/corporate-ui-docs/template/html-copy-paste/html-copy-paste.html" class="active">Copy Paste HTML</nav-item>
           </sub-navigation>  
         </nav-item>
-        <nav-item location="/corporate-ui/mobile-apps/">Mobile Apps</nav-item>
+        <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
             <nav-item location="https://github.com/scania/corporate-ui/issues/new">Report an Issue</nav-item>
-            <nav-item location="/corporate-ui/developer/support.html">Support</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
       </primary-items>
     </dont-run-c-main-navigation>
 
@@ -55,7 +55,7 @@
 
 <div class="copyable">
 
-  <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
+  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
@@ -66,18 +66,18 @@
 
     <c-main-navigation show-search>
       <primary-items>
-        <nav-item location="/corporate-ui/">Home</nav-item>
-        <nav-item location="/corporate-ui/styleguide/">Style Guide</nav-item>            
-        <nav-item location="/corporate-ui/developer/" class="active">Web Applications
+        <nav-item location="/corporate-ui-docs/">Home</nav-item>
+        <nav-item location="/corporate-ui-docs/styleguide/">Style Guide</nav-item>            
+        <nav-item location="/corporate-ui-docs/developer/" class="active">Web Applications
           <sub-navigation caption="Scania Bootstrap">
-            <nav-item location="/corporate-ui/developer/scania-bootstrap-app.html">Bootstrap CSS for Applications</nav-item>
-            <nav-item location="/corporate-ui/developer/scania-bootstrap-public.html">Bootstrap Public CSS</nav-item>  
-            <nav-item location="/corporate-ui/template/html-copy-paste/html-copy-paste.html" class="active">Copy Paste HTML</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/scania-bootstrap-app.html">Bootstrap CSS for Applications</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/scania-bootstrap-public.html">Bootstrap Public CSS</nav-item>  
+            <nav-item location="/corporate-ui-docs/template/html-copy-paste/html-copy-paste.html" class="active">Copy Paste HTML</nav-item>
           </sub-navigation>  
         </nav-item>
-        <nav-item location="/corporate-ui/mobile-apps/">Mobile Apps</nav-item>
+        <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
             <nav-item location="https://github.com/scania/corporate-ui/issues/new">Report an Issue</nav-item>
-            <nav-item location="/corporate-ui/developer/support.html">Support</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
       </primary-items>
     </c-main-navigation>
 
