--- a/docs/template/html-copy-paste/html-copy-paste-shadow-dom.html
+++ b/docs/template/html-copy-paste/html-copy-paste-shadow-dom.html
@@ -22,7 +22,7 @@
 
 
   <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>   
-  <script src="https://static.scania.com/build/global/2.4.1/js/corporate-ui.js?preload=false"></script>
+  <script src="https://static.scania.com/build/global/2.5.0/js/corporate-ui.js?preload=false"></script>
 
   <link rel="import" href="https://static.scania.com/build/global/2.3.2/html/component/Navigation/corporate-header/corporate-header.html?dom=shady">
   <link rel="import" href="https://static.scania.com/build/global/2.3.2/html/component/Navigation/corporate-footer/corporate-footer.html?dom=shady">
@@ -35,7 +35,7 @@
 
 
 
-<!--   <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
+<!--   <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
@@ -44,17 +44,17 @@
 
     <c-main-navigation show-search>
       <primary-items>
-        <nav-item location="/corporate-ui/">Home</nav-item>
-        <nav-item location="/corporate-ui/styleguide/">Style Guide</nav-item>            
-        <nav-item location="/corporate-ui/developer/" class="active">Web Applications
+        <nav-item location="/corporate-ui-docs/">Home</nav-item>
+        <nav-item location="/corporate-ui-docs/styleguide/">Style Guide</nav-item>            
+        <nav-item location="/corporate-ui-docs/developer/" class="active">Web Applications
           <sub-navigation caption="Scania Bootstrap">
-            <nav-item location="/corporate-ui/developer/bootstrap-original-docs.html">Bootstrap Documentation</nav-item>
-            <nav-item location="/corporate-ui/template/html-copy-paste/html-copy-paste.html" class="active">HTML Copy Paste</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html">Bootstrap Documentation</nav-item>
+            <nav-item location="/corporate-ui-docs/template/html-copy-paste/html-copy-paste.html" class="active">HTML Copy Paste</nav-item>
           </sub-navigation>  
         </nav-item>
-        <nav-item location="/corporate-ui/mobile-apps/">Mobile Apps</nav-item>
+        <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
             <nav-item location="https://github.com/scania/corporate-ui/issues/new">Report an Issue</nav-item>
-            <nav-item location="/corporate-ui/developer/support.html">Support</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
       </primary-items>
     </c-main-navigation> -->
 
