--- a/docs/template/light-examples.html
+++ b/docs/template/light-examples.html
@@ -10,7 +10,7 @@
   <title>UX Library</title>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
-  <script src="https://static.scania.com/build/global/2.4.1/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/2.5.0/js/corporate-ui.js"></script>
 
 
   <style>
@@ -28,7 +28,7 @@
 </head>
 <body class="scania ux-lib app" data-env="dev">
 
-  <c-corporate-header site-name="Fleet Management" site-url="/corporate-ui/">
+  <c-corporate-header site-name="Fleet Management" site-url="/corporate-ui-docs/">
     <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
@@ -335,6 +335,6 @@
     </section>
 
   </c-main-content>
-   <script src="/corporate-ui/ux-lib.js"></script>
+   <script src="/corporate-ui-docs/ux-lib.js"></script>
 </body>
 </html>
