--- a/docs/template/main-hero.htm
+++ b/docs/template/main-hero.htm
@@ -8,10 +8,10 @@
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
   <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>   
-  <script src="https://static.scania.com/build/global/2.4.1/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/2.5.0/js/corporate-ui.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui/js/google-analytics.js"></script>  
+  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
 
 
 
@@ -20,7 +20,7 @@
 </head>
 <body unresolved class="scania ux-lib">
 
-  <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
+  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
