--- a/docs/template/html-copy-paste/c-html-copy-paste-shadow-dom.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste-shadow-dom.html
@@ -4,7 +4,7 @@
   <link rel="import" type="css" href="https://static.scania.com/resources/fonts/scania-sans/scania-fonts.css">
   <link rel="import" type="css" href="https://static.scania.com/resources/fonts/font-awesome/font-awesome.css">
   <link rel="import" type="css" href="https://static.scania.com/resources/icons/scania/icons.css">
-  <link rel="import" type="css" href="https://static.scania.com/build/global/2.3.2/css/core.css">
+  <link rel="import" type="css" href="https://static.scania.com/build/global/2.5.0/css/core.css">
 
   <template>
 
@@ -533,7 +533,7 @@
  
 <!--     <c-highcharts type="spline" data="[[0,0],[1,7],[2,1],[3,6],[4,8],[5,6]]" title="Lowered fuel consumption during one week" x-label="Iterations" y-label="Awesomeness Index" height="400px">
     </c-highcharts>
-    <link rel="import" href="https://static.scania.com//build/global/2.3.2/html/component/Data%20Visualization/highcharts/highcharts.html"> -->
+    <link rel="import" href="https://static.scania.com//build/global/2.5.0/html/component/Data%20Visualization/highcharts/highcharts.html"> -->
   </div>
 </div>
                 </div>                                 
@@ -661,7 +661,7 @@
             <div class="col-md-6">  
 <div class="panel panel-default copyable">
   <div class="panel-body">
-    <h3><a href="https://github.scania.com/corporate-ui/icons/">Scania Icons available in positive and negative colors</a> </h3>
+    <h3><a href="https://scania.github.io/corporate-ui-docs/icons/">Scania Icons available in positive and negative colors</a> </h3>
     <span><i class="scania-icon-social-media-twitter md"></i></span>
     <span><i class="scania-icon-service_exchange md"></i></span>
     <span><i class="scania-icon-no-photo md"></i></span>
@@ -673,7 +673,7 @@
     <span><i class="scania-icon-connected-services-bus md"></i></span>
     <span><i class="scania-icon-info-round md"></i></span>
     <span><i class="scania-icon-call-us md"></i></span>
-    <span><a href="https://github.scania.com/corporate-ui/icons/"><i class="scania-icon-link md"></i></a> </span>
+    <span><a href="https://scania.github.io/corporate-ui-docs/icons/"><i class="scania-icon-link md"></i></a> </span>
   </div>  
 </div>
             </div>             
