--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -6,19 +6,29 @@
   <noscript>
     <meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html">
   </noscript>
-
+  <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
+  
   <title>Corporate UI - Angular Basic Template</title>
 
   <script src="https://static.scania.com/build/global/2.5.0/js/corporate-ui.js?preload=false"></script>
-  <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
+
 
 </head>
 
 <body class="scania app" ng-controller="ThisSite as thissite">
 
-  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
-    <nav-item location="/corporate-ui-docs/">UX Library</nav-item>
-    <nav-item location="https://github.com/scania/corporate-ui">Scania GitHub</nav-item>
+  <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
+    <nav-item location="/corporate-ui/">UX Library</nav-item>
+	<nav-item>
+	    <div class="dropdown">
+	    <a data-toggle="dropdown" href="#">Jesper Karlsson</a>
+	      <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+	        <li><a href="">Home</a></li>
+	        <li><a href="">Home2</a></li>            
+	        <li><a href="">Home4</a></li>
+	      </ul>
+	    </div>
+	</nav-item>
   </c-corporate-header>
     
   <c-main-content>
@@ -26,18 +36,37 @@
       <primary-items>
         <nav-item ng-repeat="item in thissite.items" location="{{item.url}}" nav-item="item" active="{{item.active}}" ng-click="thissite.changeView($event, item)"></nav-item>
       </primary-items>
+      <secondary-items>
+          <nav-item>
+            <div class="dropdown">
+            <a data-toggle="dropdown" href="#">Dropdown 1</a>
+              <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                <li><a href="">Home</a></li>
+                <li><a href="">Home2</a></li>            
+                <li><a href="">Home4</a></li>
+              </ul>
+	        </div>
+	      </nav-item>
+          <nav-item>
+            <div class="dropdown">
+            <a data-toggle="dropdown" href="#">Dropdown 2</a>
+              <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                <li><a href="">Home</a></li>
+                <li><a href="">Home2</a></li>            
+                <li><a href="">Home4</a></li>
+              </ul>
+          </div>
+        </nav-item>         
+      </secondary-items>
     </c-main-navigation>
 
-    <section>
+    <section class="light">
       <div class="container">
         <article>
-        <h1>Angular Corporate UI Demo</h1>
-          <p>This is a demopage using AngularJS togheter with Corporate UI. Populating the main navigation can be solved in many different ways and this is a very basic sample. It is not intended to use "as is" rather than to give you ideas of how to pair Corporate UI with the framework of your choice. 
-          When you've solved the inital setup, then use <a href="/corporate-ui-docs/developer/bootstrap-original-docs.html">Scania Bootstrap</a> to apply the Scania Brand Identity to your application.</p>
-          <p>Learn why <a href="/corporate-ui-docs/developer/caching.html">you shouldn't include Corporate UI in your build</a> rather than fetch it from <a href="/corporate-ui-docs/images/data-centers.png" target="_blank">the Scania CDN</a> in real time.</p> 
-          <a href="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html" class="btn btn-link btn-lg"><i class="icon-arrow-left"></i> To UX Library</a>
+        <h2>Angular Corporate UI Demo</h2>
+          <p>This is a demopage using AngularJS togheter with Corporate UI. Populating the main navigation can be solved in meny differnet ways and this is a very basic sample. It is not intended to use "as is" rather than to give you ideas and samples of how to pair Corporate UI with the framework of your choice. Use <a href="/corporate-ui/developer/bootstrap-original-docs.html">Scania Bootstrap</a> to apply the Scania Brand Identity to your application.</p>
+          <p>Learn why <a href="/corporate-ui/developer/caching.html">you shouldn't include Corporate UI in your build</a> rather than fetch it from the Scania CDN in real time.</p> 
           <a href="angular-basic-template.html" download class="btn btn-default btn-lg">Download this template</a>
-          
         </article>  
       </div>
     </section>
@@ -57,22 +86,22 @@
       var vm = this;
 
       vm.items = [
-        { name: 'Home', location: '/corporate-ui-docs/'},
-        { name: 'Style Guide', location: '/corporate-ui-docs/styleguide/', children: [
-          { name: 'Logotype', location: '/corporate-ui-docs/logotype/' },
-          { name: 'Icons', location: '/corporate-ui-docs/icons/' },
-          { name: 'Colours', location: '/corporate-ui-docs/colours/' },
-          { name: 'Typography', location: '/corporate-ui-docs/typography/' }
+        { name: 'Home', location: '/corporate-ui/', active: true },
+        { name: 'Style Guide', location: '/corporate-ui/styleguide/', children: [
+          { name: 'Logotype', location: '/corporate-ui/logotype/' },
+          { name: 'Icons', location: '/corporate-ui/icons/' },
+          { name: 'Colours', location: '/corporate-ui/colours/' },
+          { name: 'Typography', location: '/corporate-ui/typography/' }
         ] },
-        { name: 'Web Applications', location: '/corporate-ui-docs/developer/', active: true , children: [
-          { name: 'Corporate UI', location: '/corporate-ui-docs/developer/', active: true  },
-          { name: 'UIaaS', location: '/corporate-ui-docs/developer/uiaas.html' },
-          { name: 'Scania Bootstrap', location: '/corporate-ui-docs/developer/scania-bootstrap.html' },
-          { name: 'Support', location: '/corporate-ui-docs/template/html-copy-paste/html-copy-paste.html' }
+        { name: 'Web Applications', location: '/corporate-ui/developer/', children: [
+          { name: 'Corporate UI', location: '/corporate-ui/developer/' },
+          { name: 'Caching', location: '/corporate-ui/developer/caching.html' },
+          { name: 'Scania Bootstrap', location: '/corporate-ui/developer/scania-bootstrap.html' },
+          { name: 'Support', location: '/corporate-ui/template/html-copy-paste/html-copy-paste.html' }
         ] },
-        { name: 'Mobile Apps', location: '/corporate-ui-docs/mobile-apps/' },
+        { name: 'Mobile Apps', location: '/corporate-ui/mobile-apps/' },
         { name: 'Report an Issue', location: '/scania/corporate-ui/issues' },
-        { name: 'Support', location: '/corporate-ui-docs/developer/support.html' }
+        { name: 'Support', location: '/corporate-ui/developer/support.html' }
       ];
 
       vm.changeView = function($event, target) {
