--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -7,7 +7,7 @@
     <meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html">
   </noscript>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
-  
+  <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script> 
   <title>Corporate UI - Angular Basic Template</title>
 
   <script src="https://static.scania.com/build/global/2.5.0/js/corporate-ui.js?preload=false"></script>
