Fixed custom select

--- a/docs/component/index.html
+++ b/docs/component/index.html
@@ -29,7 +29,7 @@
 
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item>
-      <select class="form-control input-sm hidden">
+      <select class="form-control custom-select input-sm hidden">
         <option selected>2.0.0</option>
         <option>beta2</option>
         <option>development</option>
