Testing on static

--- a/docs/template/advanced-tables/table-pagination.html
+++ b/docs/template/advanced-tables/table-pagination.html
@@ -9,7 +9,7 @@
   <title>Table with Pagination</title>
 
   <script src="https://static.scania.com/vendors/frameworks/jquery/1.11.3/jquery-1.11.3.min.js"></script>   
-  <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/3.1.0/js/corporate-ui.js"></script>
 
   
     <!-- Table Sorter Plugin -->
