--- a/docs/template/corporate-ui-basic-template.html
+++ b/docs/template/corporate-ui-basic-template.html
@@ -11,12 +11,12 @@
   
   <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>   
 
-  <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/3.1.0/js/corporate-ui.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
   <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
 
-  <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/3.1.0/js/corporate-ui.js"></script>
 
   <!-- 
   To the link/import list below, add the components that the page will include. Components can be found on in the UX Library at static.scania.com/ux-library (internal users only).
