HTML COPY N PASET UPDATES

--- a/docs/template/html-copy-paste/c-html-copy-paste.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste.html
@@ -4,12 +4,9 @@
 
     <style>
 
-        section {
-          padding: 20px 20px;
-          font-family: 'Scania Sans Semi Condensed';
-        }
 
-        article.typography h1 {font-size: 28px;}
+
+/*        article.typography h1 {font-size: 28px;}
 
         .text-center {
           text-align: center!important;
@@ -230,7 +227,7 @@
         header.c-page-header .page-header {
           border: none;
           margin-top: 0;
-        }
+        }*/
 
 
         c-main-content {
