--- a/docs/component/examples/custom-element2.html
+++ b/docs/component/examples/custom-element2.html
@@ -16,8 +16,8 @@
 		}
 	</style>
 	<link rel="stylesheet" href="/css/corporate-ui.css">
-	<script src="/vendors/frameworks/webcomponents.js/0.7.24/ShadowDOM.min.js"></script>
-	<script src="/vendors/frameworks/webcomponents.js/0.7.24/CustomElements.min.js"></script>
+	<script src="https://static.scania.com/vendors/frameworks/webcomponents.js/0.7.24/ShadowDOM.min.js"></script>
+	<script src="https://static.scania.com/vendors/frameworks/webcomponents.js/0.7.24/CustomElements.min.js"></script>
 
 	<template id="c-header">
 		<style>
