--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -10,16 +10,6 @@
     <title>Corporate UI - Developers</title>
 
     <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/js/corporate-ui.js"></script>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110069805-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-110069805-1');
-    </script>
     
     <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
     <link rel="import" href="scania-doc/scania-doc.html">
@@ -28,8 +18,8 @@
   <body class="scania ux-lib" data-env="dev">
 
     <c-corporate-header site-name="Developers" site-url="/">
-      <nav-item location="https://github.scania.com/pages/Scania/ux-library/">UX Library</nav-item>
-      <nav-item location="https://github.scania.com/scania/corporate-ui">Scania GitHub</nav-item>
+      <nav-item location="https://scania.com/ux-library">UX Library</nav-item>
+      <nav-item location="https://github.com/scania/corporate-ui">Scania GitHub</nav-item>
     </c-corporate-header>
 
     <c-main-content>
@@ -49,7 +39,7 @@
     <c-corporate-footer></c-corporate-footer>
 
     <script>
-      var html_root = 'https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/components',
+      var html_root = 'https://static.scania.com/build/global/3.1.0/components/',
       component = CorporateUi.getUrlParameter('c'),
       path = [html_root, component, component].join('/') + '.html';
 
