--- a/docs/component/examples/Bootstrap/forms.html
+++ b/docs/component/examples/Bootstrap/forms.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://static.scania.com/vendors/components/jQuery/select2/3.5.2/css/select2.css">
     <link rel="stylesheet" href="https://static.scania.com/vendors/components/jQuery/select2/3.5.2/css/corporate-ui-select.css">
     <script src="../../../js/corporate-ui.js"></script>
-    <script src="/vendors/frameworks/jQuery/2.2.2/dist/jquery.js"></script>
+    <script src="https://static.scania.com/vendors/frameworks/jQuery/2.2.2/dist/jquery.js"></script>
     <script src="https://static.scania.com/vendors/components/jQuery/select2/3.5.2/js/select2.js"></script>
          <script>
           $(document).ready(function() {
