--- a/docs/component/examples/angular-navigation3.html
+++ b/docs/component/examples/angular-navigation3.html
@@ -104,7 +104,7 @@
     </c-social-share>
   </c-corporate-footer>
 
-  <script src="/vendors/frameworks/angular/1.5.5/angular.min.js"></script>
+  <script src="https://static.scania.com/vendors/frameworks/angular/1.5.5/angular.min.js"></script>
 
   <script>
     angular
