--- a/docs/component/examples/data-interaction/form-field.html
+++ b/docs/component/examples/data-interaction/form-field.html
@@ -1,6 +1,6 @@
 
-<script src="/vendors/components/bootstrap/bootstrap-datepicker/1.6.4/dist/js/bootstrap-datepicker.min.js"></script>
-<link href="/vendors/components/bootstrap/bootstrap-datepicker/1.6.4/dist/css/bootstrap-datepicker.min.css" rel="stylesheet">
+<script src="https://static.scania.com/vendors/components/bootstrap/bootstrap-datepicker/1.6.4/dist/js/bootstrap-datepicker.min.js"></script>
+<link href="https://static.scania.com/vendors/components/bootstrap/bootstrap-datepicker/1.6.4/dist/css/bootstrap-datepicker.min.css" rel="stylesheet">
 
 <dom-module id="form-field">
   <template>
