--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -15,8 +15,9 @@
     <link rel="import" href="scania-doc/scania-doc.html">
     <link rel="stylesheet" href="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/css/ux-library.css">
 
+  <link rel="import" href="https://static.scania.com/build/global/3.1.0/components/alert/alert.html">
+  <link rel="import" href="https://static.scania.com/build/global/3.1.0/components/find-a-dealer-teaser/find-a-dealer-teaser.html">  
 
-    
   </head>
   <body class="scania ux-lib">
 
@@ -35,7 +36,7 @@
             <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>
             <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
             <nav-item location="/corporate-ui-docs/developer/scania-bootstrap.html">Scania Bootstrap</nav-item>            
-            <nav-item location="/corporate-ui-docs/component/index.html" class="active">Components</nav-item>
+            <nav-item location="/corporate-ui-docs/component/index.html">Components</nav-item>
             <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
           </sub-navigation>
         </nav-item>
