Added Support to Top Links

--- a/docs/template/corporate-ui-basic-template.html
+++ b/docs/template/corporate-ui-basic-template.html
@@ -42,7 +42,7 @@
 <body class="scania app">
     
   <c-corporate-header site-name="Application Name">
-    <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
+    <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
     
