--- a/docs/component/component-OLD-ASP.html
+++ b/docs/component/component-OLD-ASP.html
@@ -26,7 +26,7 @@
 <body unresolved class="bootstrap scania">
     
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
-    <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
+    <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
     
