--- a/docs/component/index-OLD-ASP.html
+++ b/docs/component/index-OLD-ASP.html
@@ -35,7 +35,7 @@
         <option>development</option>
       </select>
     </nav-item>
-    <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
+    <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
 
