--- a/docs/template/light-examples.html
+++ b/docs/template/light-examples.html
@@ -29,7 +29,7 @@
 <body class="scania ux-lib app" data-env="dev">
 
   <c-corporate-header site-name="Fleet Management" site-url="/corporate-ui-docs/">
-    <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
+    <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
 
