--- a/docs/ux-lib.css
+++ b/docs/ux-lib.css
@@ -10,9 +10,7 @@ body.CRStest {background:red !important}
 }
 
 
-html {opacity:1;background-color: black}
-
-body {background: white}
+html {opacity:1;}
 
 
 /*a, strong, button {
