Removed black background on Body

--- a/docs/template/html-copy-paste/c-html-copy-paste.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste.html
@@ -440,6 +440,7 @@
     <h3>Removing the panel heading</h3>
     <p>Removing the panel heading will give a just a white panel with increased margins.</p>
     <h4>A table are smaller and more delicate when placed inside a panel</h4>
+    <div class="table-responsive"> 
     <table class="table table-striped table-sm">
       <thead>
         <tr>
@@ -519,6 +520,7 @@
       </tbody>
     </table>
   </div>
+  </div>
 </div>
                 </div> 
                 <div class="col-md-12">
@@ -536,6 +538,7 @@
           </div>
         <div class="row">
           <div class="col-md-6">
+<div class="table-responsive"> 
 <table class="table table-striped table-clickable table-panel copyable">
   <thead>
     <tr>
@@ -614,6 +617,7 @@
     </tr>
   </tbody>
 </table>
+</div>
           </div>
           <div class="col-md-6">
 <div class="panel panel-default copyable">
