--- a/docs/template/basic-template.html
+++ b/docs/template/basic-template.html
@@ -36,7 +36,7 @@
 		</c-main-navigation>
 		<section>
 
-			<link rel="import" href="https://static.scania.com/build/global/2.5.0/html/component/Content%20+%20Teasers/teaser/teaser.html">
+			<link rel="import" href="https://static.scania.com/build/global/3.1.0/components/teaser/teaser.html">
 			<c-teaser variation="1" headline="Increase Productivity" description="Molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et.">
 				<teaser-item headline="Life at Scania" image="https://static.scania.com/resources/images/demo/truck-tires-mud.png">
 					Scania’s spirit of leadership is built upon shared and inclusive core values. This creates a unique climate where our employees enjoy taking on responsibility – and the chance to develop and realise their potential.
@@ -47,7 +47,7 @@
 			</c-teaser>
 		</section>
 		<section class="light">
-			<link rel="import" href="https://static.scania.com//build/global/2.5.0//html/component/Content%20+%20Teasers/teaser/teaser.html">
+			<link rel="import" href="https://static.scania.com/build/global/3.1.0/components/teaser/teaser.html">
 			<c-teaser variation="2" headline="Tailored for you" description="Based around your area of industry and application, our tailored made packages are moulded around your needs." link="#test" link-text="Discover total solutions">
 				<teaser-item headline="Modularised design" image="https://static.scania.com/resources/images/demo/modules.jpg"></teaser-item>
 				<teaser-item headline="Tailored servicing & fleet management" image="https://static.scania.com/resources/images/demo/tailored.jpg"></teaser-item>
