Margins for h1 small

--- a/docs/ux-lib.css
+++ b/docs/ux-lib.css
@@ -7,8 +7,10 @@ body.CRStest {background:red !important}
   h1, .public h1, .app .public h1, .portlet-application h1, article h1 {
       font-size: 3.6rem;
   }
-  h1 small {
+  .page-header h1 small {
     line-height: 1.25;
+    margin-top: 4px;
+    margin-bottom: 10px;
   }
 }
 
