--- a/docs/developer/css/scania-bootstrap-docs.css
+++ b/docs/developer/css/scania-bootstrap-docs.css
@@ -305,6 +305,10 @@
 .bs-docs-section {
   margin-bottom: 60px;
 }
+.bs-docs-section .page-header {
+  margin-bottom: 0;
+}
+
 .bs-docs-section .page-header h1[id],
 .bs-docs-section .page-header h2[id] {
   margin-top: 0;
@@ -312,7 +316,8 @@
   padding-bottom: 0;
   margin: 0;
 }
-
+.bs-docs-section .page-header #js-overview,
+.bs-docs-section .page-header #components-overview,
 .bs-docs-section .page-header #css-overview {
   padding-top: 15px;
 }
