Made Bootstrap Links coherent

--- a/docs/component/examples/bootstrap-pure.html
+++ b/docs/component/examples/bootstrap-pure.html
@@ -62,7 +62,7 @@
         <li data-id="developer-components" class="active"><a href="developer-components.html">Components</a></li>
         <li data-id="developer-javascript"><a href="developer-javascript.html">Javascript</a></li>
         <li data-id="developer-icons"><a href="developer-icons.html">Icons</a></li>
-        <li data-id="developer-scania-bootstrap-classes"><a href="developer-scania-bootstrap-classes.html">Scania Bootstrap classes</a></li>
+        <li data-id="developer-scania-bootstrap-classes"><a href="developer-scania-bootstrap-classes.html">Scania Bootstrap Classes</a></li>
         <li data-id="developer-print"><a href="developer-print.html">Print</a></li>
         <li data-id="developer-support"><a href="developer-support.html">Support</a></li>
         <li data-id="developer-recommended-tools"><a href="developer-recommended-tools.html">Recommended tools</a></li>
