--- a/docs/developer/css/scania-bootstrap-docs.css
+++ b/docs/developer/css/scania-bootstrap-docs.css
@@ -3,7 +3,7 @@
 
 .text-left {text-align:left !important;}
 .text-center {text-align:center !important;}
-.text-right {text-align:right}
+.text-right {text-align:right !important;}
 
 /* End temporary classes */
 
