Fixes for indentation, example code in documentation.

--- a/docs/ux-lib.css
+++ b/docs/ux-lib.css
@@ -4,7 +4,8 @@ body.CRStest {background:red !important}
 
 .text-left {text-align:left !important;}
 .text-center {text-align:center !important;}
-.text-right {text-align:right}
+.text-right {text-align:right !important;}
+
 
 @media (max-width: 768px) {
   h1, .public h1, .app .public h1, .portlet-application h1, article h1 {
