--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -11,6 +11,19 @@
     <title>Corporate UI</title>
 
     <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/js/corporate-ui.js"></script>
+
+    <style>
+
+        .header-is-sticky c-corporate-header .navbar-symbol.should-stick, c-corporate-header.header-is-sticky .navbar-symbol.should-stick  {
+            width: 41px !important;
+            height: 37px !important;
+        }
+        
+        .header-is-sticky c-corporate-header .navbar-symbol.should-stick, c-corporate-header.header-is-sticky .navbar-symbol.should-stick {
+            background-image: transparent !important;
+        }
+
+    </style>
   </head>
 
 
